Fixed the lack of alignment between the left and the right part of the footer - Исправлено отсутствие выравнивания между левой и правой частью подвала

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ p {
 .justify-between {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .title-2 {
